GUI: ProgressBar fixed vertical align

--- a/frontend/gui.css
+++ b/frontend/gui.css
@@ -314,7 +314,7 @@
   text-align : center;
   height : 20px;
   z-index : 2;
-  line-height : 20px;
+  line-height : 22px;
 }
 
 /**
